--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
 
   <body class="responsive">
     <div class="reveal">
-      <div class="slides"><section class="variable-size-headings light has-background-image title-container present has-dark-background fitted" data-background-position="right" data-background-image="images/Kevin_bw.png" data-background-size="contain" data-state="background-opacity-40" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
+      <div class="slides"><section class="variable-size-headings light has-background-image title-container present has-dark-background fitted" data-background-position="right" data-background-size="contain" data-background-image="images/Kevin_bw.png" data-state="background-opacity-40" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-title" style="width: 100%; font-size: 1rem;">
@@ -53,7 +53,7 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/blogger_w.png" data-state="background-opacity-10" data-background-color="#205aff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-image="images/blogger_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#205aff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-default" style="width: 100%; font-size: 0.672rem;">
@@ -68,7 +68,7 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/saas_w.png" data-state="background-opacity-10" data-background-color="#4021ff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-image="images/saas_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#4021ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-default" style="width: 100%; font-size: 0.578rem;">
@@ -96,7 +96,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/oracle_w.png" data-state="background-opacity-10" data-background-color="#7c00ff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-image="images/oracle_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#7c00ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.672rem;">
@@ -112,7 +112,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-image="images/rl_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#a300ff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-size="contain" data-background-image="images/rl_w.png" data-state="background-opacity-10" data-background-color="#a300ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.859rem;">
@@ -143,11 +143,11 @@
 <li>Expanded <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.</li>
 <li>Formed <strong>strategic partnerships</strong>, including Square, for global market growth.</li>
 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>.</li>
-</ul></div><img src="images/Screen%20Recording%201-23-2023%20at%2011.34%20AM.gif" class=" position-center-center" style=""><img src="images/Square_LogoLockup_White.png" class=" position-center-center" style="">
+</ul></div><img src="images/Screen%20Recording%201-23-2023%20at%2011.34%20AM.gif" class=" size-contain position-center-center" style=""><img src="images/Square_LogoLockup_White.png" class=" size-contain position-center-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-image="images/lever_rgb_logo_standard_inverted.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#e600de" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/lever_rgb_logo_standard_inverted.png" data-state="background-opacity-10" data-background-color="#e600de" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.766rem;">
@@ -165,7 +165,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-image="images/Hurd_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#f705b2" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-size="contain" data-background-image="images/Hurd_w.png" data-state="background-opacity-10" data-background-color="#f705b2" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-2 media-grid" style="width: 100%; font-size: 0.813rem;">
@@ -189,7 +189,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-image="images/solution_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff1c7f" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/solution_w.png" data-state="background-opacity-10" data-background-color="#ff1c7f" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-default" style="width: 100%; font-size: 0.625rem;">
@@ -255,7 +255,7 @@
 </section><section class="variable-size-headings light has-background-image v-split-container present fit-warning has-light-background fitted" data-background-image="images/social-media_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff710a" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-      <div class="layout-v-split" style="width: 100%; font-size: 0.344rem;">
+      <div class="layout-v-split" style="width: 100%; font-size: 0.391rem;">
         <div style=""><h2 id="recommendations">Recommendations</h2>
 
 <p>Don't just take it from me – here's what colleagues and industry leaders have said about our collaborations:</p>
@@ -268,15 +268,11 @@
 
 <p>- <strong>Paul Wilson, CTO of Hurd.ai</strong></p>
 
-<p>&nbsp;</p>
-
 <blockquote>
 <p>"Kevin quickly learned each new network, fought for the best possible experience, and brokered agreements across PM, UX, and Engineering. His work ethic, attention to detail, and obsession with delivering great experiences for customers earned my respect."</p>
 </blockquote>
 
 <p>- <strong>Emily Leahy-Thieler, Design Leader</strong></p>
-
-<p>&nbsp;</p>
 
 <blockquote>
 <p>"Kevin is a top-notch PM who fights for quality products and for his team."</p>
@@ -289,23 +285,17 @@
 
 <p>- <strong>Mark Walker, Engineering Leader</strong></p>
 
-<p>&nbsp;</p>
-
 <blockquote>
 <p>"Kevin has proved he can work well in fast-paced and high-pressure environments."</p>
 </blockquote>
 
 <p>- <strong>Lalitha (Loly) Venkataraman, Senior QA Analyst</strong></p>
 
-<p>&nbsp;</p>
-
 <blockquote>
 <p>"Kevin is one of those leaders who can bridge the strategic vision with the tactical execution."</p>
 </blockquote>
 
 <p>- <strong>Bill Kirst, Leading Change in the Era of AI</strong></p>
-
-<p>&nbsp;</p>
 
 <blockquote>
 <p>"Kevin is the right people, a go-to PM."</p>
