--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
 
   <body class="responsive">
     <div class="reveal">
-      <div class="slides"><section class="variable-size-headings light has-background-image title-container present has-dark-background fitted" data-background-size="contain" data-background-position="right" data-background-image="images/Kevin_bw.png" data-state="background-opacity-40" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
+      <div class="slides"><section class="variable-size-headings light has-background-image title-container present has-dark-background fitted" data-background-position="right" data-background-image="images/Kevin_bw.png" data-background-size="contain" data-state="background-opacity-40" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-title" style="width: 100%; font-size: 1rem;">
@@ -112,7 +112,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-image="images/rl_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#a300ff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present has-dark-background fitted" data-background-size="contain" data-background-image="images/rl_w.png" data-state="background-opacity-10" data-background-color="#a300ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.859rem;">
@@ -131,7 +131,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-image="images/Sendoso-Logo-White.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#c800f5" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image grid-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/Sendoso-Logo-White.png" data-state="background-opacity-10" data-background-color="#c800f5" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
@@ -189,7 +189,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-size="contain" data-background-image="images/solution_w.png" data-state="background-opacity-10" data-background-color="#ff1c7f" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-image="images/solution_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff1c7f" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-default" style="width: 100%; font-size: 0.625rem;">
@@ -252,10 +252,10 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image v-split-container present fit-warning has-light-background fitted" data-background-size="contain" data-background-image="images/social-media_w.png" data-state="background-opacity-10" data-background-color="#ff710a" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image default-container present fit-warning has-light-background fitted" data-background-image="images/social-media_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff710a" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-      <div class="layout-v-split" style="width: 100%; font-size: 0.391rem;">
+      <div class="layout-default" style="width: 100%; font-size: 0.25rem;">
         <div style=""><h2 id="recommendations">Recommendations</h2>
 
 <p>Don't just take it from me – here's what colleagues and industry leaders have said about our collaborations:</p>
@@ -263,27 +263,28 @@
 <p>&nbsp;</p>
 
 <blockquote>
-<p>"Kevin meticulously charted the product's direction, providing clarity for all stakeholders. His user-centric approach ensured our product was always attuned to our customers' needs."</p>
-</blockquote>
-
-<p>- <strong>Paul Wilson, CTO of Hurd.ai</strong></p>
-
-<blockquote>
-<p>"Kevin quickly learned each new network, fought for the best possible experience, and brokered agreements across PM, UX, and Engineering. His work ethic, attention to detail, and obsession with delivering great experiences for customers earned my respect."</p>
+<p>"Kevin fought for the best possible experience, and brokered agreements across PM, UX, and Engineering. His work ethic, attention to detail, and obsession with delivering great experiences for customers earned my respect."</p>
 </blockquote>
 
 <p>- <strong>Emily Leahy-Thieler, Design Leader</strong></p>
+
+<p>&nbsp;</p>
 
 <blockquote>
 <p>"Kevin is a top-notch PM who fights for quality products and for his team."</p>
 </blockquote>
 
-<p>- <strong>Christina James, Staff Quality Assurance Analyst</strong></p></div>
-        <div style=""><blockquote>
+<p>- <strong>Christina James, Staff Quality Assurance Analyst</strong></p>
+
+<p>&nbsp;</p>
+
+<blockquote>
 <p>"Kevin is confident and comfortable in all interactions, whether with executives or across teams."</p>
 </blockquote>
 
 <p>- <strong>Mark Walker, Engineering Leader</strong></p>
+
+<p>&nbsp;</p>
 
 <blockquote>
 <p>"Kevin has proved he can work well in fast-paced and high-pressure environments."</p>
@@ -291,23 +292,22 @@
 
 <p>- <strong>Lalitha (Loly) Venkataraman, Senior QA Analyst</strong></p>
 
+<p>&nbsp;</p>
+
 <blockquote>
 <p>"Kevin is one of those leaders who can bridge the strategic vision with the tactical execution."</p>
 </blockquote>
 
 <p>- <strong>Bill Kirst, Leading Change in the Era of AI</strong></p>
 
-<blockquote>
-<p>"Kevin is the right people, a go-to PM."</p>
-</blockquote>
-
-<p>- <strong>Wesley Barnes, Director of Product Management</strong> </p>
+<p>&nbsp;</p>
 
 <p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/"><strong>LinkedIn</strong></a></p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image section-container present fit-warning has-light-background fitted" data-background-image="images/network_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff9500" style="display: grid;" data-updated="true">
+      
+</section><section class="variable-size-headings light has-background-image section-container present fit-warning has-light-background fitted" data-background-size="contain" data-background-image="images/network_w.png" data-state="background-opacity-10" data-background-color="#ff9500" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-section" style="width: 100%; font-size: 0.719rem;">
