--- a/index.htm
+++ b/index.htm
@@ -330,7 +330,7 @@
 </section></div>
     </div>
     <script src="engine/index.js"></script>
-    <script src="path/to/swipe-navigation.js"></script>
+    <script src="engine/swipe-navigation.js"></script>
     <!--<script src="engine/d3v4.min.js" charset="utf-8"></script>
     <script src="engine/charts.min.js" charset="utf-8"></script>
     <script src="engine/billboard.min.js"></script>-->
