--- a/index.htm
+++ b/index.htm
@@ -331,7 +331,7 @@
     </div>
     <script src="engine/index.js"></script>
     <script src="engine/swipe-navigation.js"></script>
-    <script src="engine/swipe-navigation.js"></script>
+    <script src="engine/hammer.js"></script>
     <!--<script src="engine/d3v4.min.js" charset="utf-8"></script>
     <script src="engine/charts.min.js" charset="utf-8"></script>
     <script src="engine/billboard.min.js"></script>-->
