--- a/index.htm
+++ b/index.htm
@@ -353,13 +353,11 @@
     });
 
     hammertime.on('swipeup', function() {
-        // Action for swipe up
-        // Example: document.querySelector('.navigate-up').click();
+        document.querySelector('.navigate-right').click();
     });
 
     hammertime.on('swipedown', function() {
-        // Action for swipe down
-        // Example: document.querySelector('.navigate-down').click();
+        document.querySelector('.navigate-left').click();
     });
 
     hammertime.on('tap', function(e) {
