--- a/index.htm
+++ b/index.htm
@@ -359,11 +359,11 @@
     });
 
     hammertime.on('swipeup', function() {
-        document.querySelector('.navigate-left').click(); // Modify as needed
+        document.querySelector('.navigate-right').click(); 
     });
 
     hammertime.on('swipedown', function() {
-        document.querySelector('.navigate-right').click(); // Modify as needed
+        document.querySelector('.navigate-left').click();
     });
 
     hammertime.on('tap', function(e) {
