--- a/index.htm
+++ b/index.htm
@@ -322,7 +322,7 @@
 
 <p>&nbsp;</p>
 
-<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf"><strong>Resume</strong></a> </p>
+<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Resume.pdf"><strong>Resume</strong></a> </p>
         </div>
       </div>
       <div class="footnotes"></div>
