--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,13 @@
     <base href="@@base@@" />
     <meta charset="utf-8" />
     <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" />
+   
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Kevin Middleton - Product Manager">
+    <meta property="og:description" content="Welcome! I'm Kevin Middleton, a seasoned Product Manager passionate about SaaS, innovation, and driving growth. Discover my journey, expertise, and insights in the realm of product management.">
+    <meta property="og:url" content="https://middleton.io">
+    <meta property="og:image" content="images/HeyThere.png">
+
     <link rel="stylesheet" href="engine/main.css" />
     <link rel="stylesheet" href="theme/sanfrancisco.css" />
     <link rel="stylesheet" href="engine/katex/katex.min.css" />
@@ -322,7 +329,7 @@
 
 <p>&nbsp;</p>
 
-<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Resume.pdf"><strong>Resume</strong></a> </p>
+<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf"><strong>Resume</strong></a> </p>
         </div>
       </div>
       <div class="footnotes"></div>
