--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" />
    
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Kevin Middleton - Product Manager">
+    <meta property="og:title" content="Kevin Middleton">
     <meta property="og:description" content="Welcome! I'm Kevin Middleton, a seasoned Product Manager passionate about SaaS, innovation, and driving growth. Discover my journey, expertise, and insights in the realm of product management.">
     <meta property="og:url" content="https://middleton.io">
     <meta property="og:image" content="images/HeyThere.png">
