--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,10 @@
     <base href="@@base@@" />
     <meta charset="utf-8" />
     <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" />
-   
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Kevin Middleton">
     <meta property="og:description" content="Welcome! I'm Kevin Middleton, a seasoned Product Manager passionate about SaaS, innovation, and driving growth. Discover my journey, expertise, and insights in the realm of product management.">
