--- a/index.htm
+++ b/index.htm
@@ -218,7 +218,7 @@
       <div class="layout-default" style="width: 100%; font-size: 0.578rem;">
         <div style=""><h3 id="skillsexpertise">Skills &amp; Expertise</h3>
 
-<p>My background in engineering and consulting, coupled with a focus on collaboration, equips me to demystify complex ideas.</p>
+<p>My background in engineering and consulting, coupled with a focus on collaboration, allows me to demystify complex ideas.</p>
 
 <ul>
 <li><strong>Strategic:</strong> Product Strategy, Competitive Analysis, eCommerce Strategy.</li>
