--- a/index.htm
+++ b/index.htm
@@ -421,6 +421,14 @@
   <div id="caption"></div>
 </div>
 
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "kix9xdfw7p");
+</script>
+    
 <script src="photopopup/PhotoPopup.js"></script>
 
   </body>
