--- a/index.htm
+++ b/index.htm
@@ -264,7 +264,7 @@
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       
-</section><section class="variable-size-headings light has-background-image v-split-container present fit-warning has-light-background fitted" data-background-size="contain" data-background-image="images/social-media_w.png" data-state="background-opacity-10" data-background-color="#ff710a" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image v-split-container present fit-warning has-light-background fitted" data-background-image="images/social-media_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#ff710a" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-v-split" style="width: 100%; font-size: 0.391rem;">
@@ -295,9 +295,7 @@
 </blockquote>
 
 <p>- <strong>Christina James, Staff Quality Assurance Analyst</strong></p></div>
-        <div style=""><p>&nbsp;</p>
-
-<blockquote>
+        <div style=""><blockquote>
 <p>"Kevin is confident and comfortable in all interactions, whether with executives or across teams."</p>
 </blockquote>
 
