--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
     <title>Kevin Middleton - Product Manager</title>
     <base href="@@base@@" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" />
+    <!-- meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1" / -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
