--- a/index.htm
+++ b/index.htm
@@ -53,17 +53,17 @@
 
   <body class="responsive">
     <div class="reveal">
-      <div class="slides"><section class="variable-size-headings light has-background-image v-split-container present has-dark-background fitted" data-background-image="images/hello-2_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
+      <div class="slides"><section class="variable-size-headings light has-background-image title-container present has-dark-background fitted" data-background-size="contain" data-background-position="right" data-background-image="images/Kevin_bw.png" data-state="background-opacity-20 background-filter-grayscale" data-background-color="#00a8ff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-      <div class="layout-v-split media-grid" style="width: 100%; font-size: 0.953rem;">
+      <div class="layout-title" style="width: 100%; font-size: 1rem;">
         <div style=""><h2 id="heythere">Hey There!</h2>
 
 <p>Welcome! I'm Kevin, a Product Manager passionate about <strong>bringing ideas to life</strong>. Excited to share my journey with you. Let's dive in!</p></div>
-        <img src="images/Kevin_bw.png" class=" size-contain position-right-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
+      
 </section><section class="variable-size-headings light has-background-image default-container present fit-warning has-dark-background fitted" data-background-image="images/blogger_w.png" data-background-size="contain" data-state="background-opacity-10" data-background-color="#205aff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
