--- a/index.htm
+++ b/index.htm
@@ -334,11 +334,11 @@
 
 <p>&nbsp;</p>
 
-<p>Add me on <a href="https://www.linkedin.com/in/kevinmiddleton"><strong>LinkedIn</strong></a></p>
+<p>Add me on <a href="https://www.linkedin.com/in/kevinmiddleton" id="linkedin-profile-link"><strong>LinkedIn</strong></a></p>
 
 <p>&nbsp;</p>
 
-<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf"><strong>Resume</strong></a> </p></div>
+<p>Download my <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2012-01-2023.pdf" id="resume-download-link"><strong>Resume</strong></a> </p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
