--- a/index.htm
+++ b/index.htm
@@ -85,12 +85,12 @@
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.625rem;">
         <div style=""><h3 id="professionalexperience">Professional Experience</h3>
 
-<h4 id="oraclesanfranciscoca2013—2018"><a href="https://www.oracle.com">ORACLE</a>, San Francisco, CA (2013 — 2018)</h4>
+<h4 id="oraclesanfranciscoca2013—2018"><a href="https://www.oracle.com" id="oracle-link">ORACLE</a>, San Francisco, CA (2013 — 2018)</h4>
 
 <p><strong>Senior Product Manager, Engage &amp; Social Network Expansion</strong></p>
 
 <ul>
-<li><strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr">Tumblr</a>.</li>
+<li><strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr">Tumblr</a>.</li>
 <li><strong>Launching 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.</li>
 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>.</li>
 </ul></div><img src="images/Oracle_Engage_v1.png" class=" size-contain position-center-center" style=""><img src="images/Oracle-Engage-v2.png" class=" size-contain position-center-center" style="">
